# YAY_Musa_509_final_project

./: Proposal.md  README.md  proposal
data_pipeline/: .evn  extract_crimedata.py  extract_facilitydata.py  extract_faciliytdata.py  extract_hospitaldata.py  load_crime_testing-2.py  load_crime_testing.py  load_crimedata.py  load_facilitydata.py  load_hospitaldata.py  pyproject.toml
data_pipeline/data/: facilitydata_2021-11-27.geojson  hosipitaldata.geojson
