[tool.poetry]
name = "data_pipeline"
version = "0.1.0"
description = ""
authors = ["Jiali Yao <89944340+Jellyyyyy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
python-dotenv = "^0.19.2"
requests = "^2.26.0"
SQLAlchemy = "^1.4.27"
pandas = "^1.3.4"
psycopg2-binary = "^2.9.2"
google-cloud-storage = "^1.43.0"
google-cloud-bigquery-storage = "^2.10.1"
PyMySQL = "^1.0.2"
sqlalchemy-bigquery = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
